--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "scripts": {
         "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "server": "cd backend && npm run start:dev",
-        "client": "cd client && npm run start"
+        "client": "cd client && npm run dev"
     }
 }
