--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.12.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "ms": "^2.1.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -79,6 +81,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-
   }
 }
